slack-notifications/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-notifications
  labels:
    app: slack-notifications
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: slack-notifications
