slack-notifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-notifications
  annotations:
    external-dns.alpha.kubernetes.io/hostname: slack-notifications.jshipster.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: slack-notifications.jshipster.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slack-notifications
            port:
              number: 8080
